--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     </header>
 
     <div class="profile-sticky-wrapper">
+
         <div class="img-profile">
             <img src="./assets/img-harry-potter-profile.png" alt="">
         </div>
-
     </div>
 
 
@@ -52,7 +52,7 @@
         </div>
     </div>
 
-    <section id="dados-pessoais" data-aos="fade-down">
+    <section id="dados-pessoais" data-aos="fade-up">
         <div class="container">
             <h2>Dados pessoais</h2>
 
@@ -75,7 +75,7 @@
         </div>
     </section>
 
-    <section id="objetivos" data-aos="fade-right">
+    <section id="objetivos" data-aos="fade-up">
         <div class="container">
             <h2>Objetivos</h2>
 
@@ -84,7 +84,7 @@
         </div>
     </section>
 
-    <section id="formacao-academica" data-aos="fade-left">
+    <section id="formacao-academica" data-aos="fade-up">
         <div class="container">
             <h2>Formação Acadêmica</h2>
 
@@ -158,7 +158,7 @@
         </div>
     </section>
 
-    <section id="idiomas" data-aos="fade-right">
+    <section id="idiomas" data-aos="fade-up">
         <div class="container">
             <h2>Idiomas</h2>
 
@@ -174,7 +174,7 @@
         </div>
     </section>
 
-    <section id="premios-e-reconhecimentos" data-aos="fade-left">
+    <section id="premios-e-reconhecimentos" data-aos="fade-up">
         <div class="container">
             <h2>Prêmios e Reconhecimentos</h2>
 
