--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 
 
     <div class="container">
-        <div class="separator" data-aos="fade-up">
+        <div class="separator">
             <img src="./assets/img-separador.svg" alt="">
         </div>
     </div>
 
-    <section id="dados-pessoais" data-aos="fade-up">
+    <section id="dados-pessoais">
         <div class="container">
             <h2>Dados pessoais</h2>
 
@@ -75,7 +75,7 @@
         </div>
     </section>
 
-    <section id="objetivos" data-aos="fade-up">
+    <section id="objetivos">
         <div class="container">
             <h2>Objetivos</h2>
 
@@ -84,7 +84,7 @@
         </div>
     </section>
 
-    <section id="formacao-academica" data-aos="fade-up">
+    <section id="formacao-academica">
         <div class="container">
             <h2>Formação Acadêmica</h2>
 
@@ -103,7 +103,7 @@
         </div>
     </section>
 
-    <section id="experiencia-profissional" data-aos="fade-up">
+    <section id="experiencia-profissional">
         <div class="container">
             <h2>Experiência Profissional</h2>
 
@@ -158,7 +158,7 @@
         </div>
     </section>
 
-    <section id="idiomas" data-aos="fade-up">
+    <section id="idiomas">
         <div class="container">
             <h2>Idiomas</h2>
 
@@ -174,7 +174,7 @@
         </div>
     </section>
 
-    <section id="premios-e-reconhecimentos" data-aos="fade-up">
+    <section id="premios-e-reconhecimentos">
         <div class="container">
             <h2>Prêmios e Reconhecimentos</h2>
 
