--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
 
-    <section id="dados-pessoais">
+    <section id="dados-pessoais" data-aos="fade-up">
         <div class="container">
             <h2>Dados pessoais</h2>
 
@@ -77,7 +77,7 @@
         </div>
     </section>
 
-    <section id="objetivos">
+    <section id="objetivos" data-aos="fade-down">
         <div class="container">
             <h2>Objetivos</h2>
 
@@ -86,7 +86,7 @@
         </div>
     </section>
 
-    <section id="formacao-academica">
+    <section id="formacao-academica" data-aos="fade-left">
         <div class="container">
             <h2>Formação Acadêmica</h2>
 
@@ -105,7 +105,7 @@
         </div>
     </section>
 
-    <section id="experiencia-profissional">
+    <section id="experiencia-profissional" data-aos="fade-right">
         <div class="container">
             <h2>Experiência Profissional</h2>
 
@@ -160,7 +160,7 @@
         </div>
     </section>
 
-    <section id="idiomas">
+    <section id="idiomas" data-aos="fade-up">
         <div class="container">
             <h2>Idiomas</h2>
 
@@ -176,7 +176,7 @@
         </div>
     </section>
 
-    <section id="premios-e-reconhecimentos">
+    <section id="premios-e-reconhecimentos" data-aos="fade-left">
         <div class="container">
             <h2>Prêmios e Reconhecimentos</h2>
 
